# ASR-with-Speech-Sentiment-and-Text-Summarizer

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  METRICS.md  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
.github/: code_format.yaml  issue_template.yaml  security_check.yaml
.github/workflows/: code_format.yml  security_check.yml
Automatic_Speech_Recognition/neuralnet/: dataset.py  n_mels.py  train.py  utils.py
Automatic_Speech_Recognition/scripts/: common_voice_conversion.py
Speech_Sentiment_Analysis/: Speech_Sentiment.ipynb
Speech_Sentiment_Analysis/neuralnet/: dataset.py  model.py  train.py
data analysis/: EDA.ipynb
notebook/: Automatic_Speech_Recognition.ipynb  Speech_Sentiment.ipynb  Text_Summarizer_Billsum.ipynb
src/ASR-with-Speech-Sentiment-Analysis-Text-Summarizer/: app.py
src/ASR-with-Speech-Sentiment-Analysis-Text-Summarizer/Automatic_Speech_Recognition/: decoder.py  engine.py
src/ASR-with-Speech-Sentiment-Analysis-Text-Summarizer/Speech_Sentiment_Analysis/: __init__.py  engine.py  engine2.py  feature.py
src/ASR-with-Speech-Sentiment-Analysis-Text-Summarizer/Text_Summarizer/: __init__.py  inference.py
src/ASR-with-Speech-Sentiment-Analysis-Text-Summarizer/static/: index.html  script.js  style.css  test.html
src/ASR-with-Speech-Sentiment-Analysis-Text-Summarizer/templates/: index.html
src/Automatic_Speech_Recognition/: decoder.py  engine.py
src/Automatic_Speech_Recognition/neuralnet/: dataset.py  freeze.py  model.py  train.py  utils.py
src/Automatic_Speech_Recognition/scripts/: common_voice.py
src/Speech_Sentiment_Analysis/xgb/: train.ipynb
src/Text_Summarizer/: T5_Billsum_Summarizer.ipynb  T5_Summarizer.ipynb  inference.py
summerizer/: summerizer.ipynb  summerizer.py
tests/: test_template.py
(+50 files in other folders)
