[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-with-speech-sentiment-analysis-text-summarizer"
description = "This project aims to develop a system that integrates Automatic Speech Recognition (ASR), speech sentiment analysis, and text summarization. It will handle diverse accents, noisy environments, provide real-time sentiment analysis, and generate concise summaries."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}

[tool.setuptools_scm]
write_to = "_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.sqlfluff.indentation]
indented_using_on = false
indented_on_contents = false

[tool.sqlfluff.rules.L010]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.L016]
ignore_comment_clauses = true
max_line_length = 79

[tool.pylint.message_control]
disable=["abstract-method",
        "arguments-differ",
        "import-error",
        "import-self",
        "fixme",
        "too-few-public-methods",
        "too-many-ancestors",
        "too-many-arguments",
        "too-many-locals",
        "too-many-boolean-expressions",
        "too-many-statements",]

[tool.pylint.reports]
output-format="text"
reports="no"

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = "*.py"
exclude = ["tests/", "docs/"]
